fix content wrap

--- a/src/styles/components/DashboardTaskItem.css
+++ b/src/styles/components/DashboardTaskItem.css
@@ -29,15 +29,6 @@
             align-items: start;
             justify-content: start;
             gap: 5px;
-            overflow: hidden;
-            /* min-width: 156px; */
-
-            /* & h6 {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                gap: 5px;
-            } */
 
             & span {
                 display: inline-block;
