--- a/src/styles/features/Dashboard.css
+++ b/src/styles/features/Dashboard.css
@@ -81,6 +81,7 @@
   display: flex;
   flex-direction: row;
   gap: var(--dashboard-gap);
+  flex-wrap: wrap;
 }
 
 @media (max-width: 830px) {
